# jfind

./: CMakeLists.txt  LICENSE  README.md  search_test
.github/workflows/: ci.yaml
ci/: clang-x86_64-linux-release.sh  gcc-x86_64-linux-release.sh
include/: ansi_string.hpp  ansi_string_parser.hpp  ansi_style.hpp  ansi_wrapper.hpp  buffered_reader.hpp  cancellable_reader.hpp  case_sensitivity.hpp  choice.hpp  color_16.hpp  color_rgb.hpp  config.hpp  config_json_reader.hpp  config_option_reader.hpp  double_buffer.hpp  event.hpp  event_dispatch.hpp  event_listener.hpp  file_item_reader.hpp  history_manager.hpp  input_handler.hpp  input_reader.hpp  interval_thread.hpp  item.hpp  item_cache.hpp  item_exact_matcher.hpp  item_fuzzy_matcher.hpp  item_generator.hpp  item_list.hpp  item_matcher.hpp  item_preview.hpp  item_preview_content.hpp  item_preview_reader.hpp  item_reader.hpp  item_regex_matcher.hpp  item_sorter.hpp  jfind_strategy.hpp  json_parser.hpp  json_reader.hpp  key.hpp  length_preference.hpp  (+22 more)
src/: ansi_string_parser.cpp  ansi_style.cpp  ansi_wrapper.cpp  buffered_reader.cpp  cancellable_reader.cpp  color_16.cpp  color_rgb.cpp  config.cpp  config_json_reader.cpp  config_option_reader.cpp  event.cpp  event_dispatch.cpp  file_item_reader.cpp  history_manager.cpp  input_handler.cpp  input_reader.cpp  interval_thread.cpp  item_cache.cpp  item_exact_matcher.cpp  item_fuzzy_matcher.cpp  item_generator.cpp  item_list.cpp  item_matcher.cpp  item_preview.cpp  item_preview_reader.cpp  item_reader.cpp  item_regex_matcher.cpp  item_sorter.cpp  jfind_strategy.cpp  json_parser.cpp  json_reader.cpp  key.cpp  logger.cpp  main.cpp  option.cpp  option_parser.cpp  process.cpp  process_item_reader.cpp  source.cpp  source_matcher_v1.cpp  (+11 more)
